--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+    "version": 2,
     "builds": [{
-        "src": "znajdz_chwile/wsgi.py",
-        "use": "@vercel/python",
+         "src": "package.json",
+          "use": "vercel-sapper",
+
           "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
     }],
     "routes": [
