--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
     "builds": [{
-         "src": "package.json",
-          "use": "vercel-sapper",
-
-          "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
+      "src": "djangoprojectname/wsgi.py",
+      "use": "vercel-sapper",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
     }],
     "routes": [
         {
