--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [{
       "src": "znajdz_chwile/wsgi.py",
-      "use": "vercel-sapper",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
     }],
     "routes": [
         {
